FIX: configurations and startup issues by @saqib

--- a/.example.env
+++ b/.example.env
@@ -32,4 +32,9 @@ ACCOUNT_DEFAULT_HTTP_PROTOCOL=https
 GOOGLE_CALLBACK_URL=/accounts/google/login/callback/
 APPLE_CALLBACK_URL=/accounts/apple/login/callback/
 
-
+AWS_USERNAME=...
+AWS_ACCESS_KEY_ID=..
+AWS_SECRET_ACCESS_KEY=..
+AWS_STORAGE_BUCKET_NAME=..
+AWS_S3_REGION_NAME=..
+AWS_S3_ENDPOINT_URL=..
